Bug 357627 - Hide or visualize option for elements doesn't apply
Summary: Hide or visualize option for elements doesn't apply
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: System Tray widget (other bugs)
Version First Reported In: 5.4.3
Platform: Debian testing Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-01-06 18:56 UTC by davidev
Modified: 2016-02-04 10:56 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
~/.config/plasma-org.kde.plasma.desktop-appletsrc (5.38 KB, text/plain)
2016-02-02 22:49 UTC, davidev
Details

Note You need to log in before you can comment on or make changes to this bug.
Description davidev 2016-01-06 18:56:52 UTC
Hide or visualize option for elements in the system tray doesn't apply neither persist when I tray to change that.
Comment 1 davidev 2016-02-02 22:49:43 UTC
Created attachment 96988 [details]
~/.config/plasma-org.kde.plasma.desktop-appletsrc
Comment 2 Marco Martin 2016-02-03 14:59:05 UTC
Git commit 13ad256cc40a657b54a236eef5c491fdf6b48ffc by Marco Martin.
Committed on 03/02/2016 at 14:58.
Pushed by mart into branch 'master'.

reset the model on list always shown/hide change

something really wrong is going on on the proxymodel updates
the wrong item gets removed from the list.
it may be  a wrong mapping between source and dest model
(doesn't seem so)
or may have been some misguided attempt by QML to recycle delegates

anyways resetting the model in some conditions even if expensive
seems to be the only way to workaround this.
Anyways this systray implementation is beyond any repair and
the rewritten version won't have to rely on so many models
and proxymodels
Related: bug 352055

M  +10   -3    applets/systemtray/plugin/tasksproxymodel.cpp
M  +4    -1    applets/systemtray/plugin/tasksproxymodel.h

http://commits.kde.org/plasma-workspace/13ad256cc40a657b54a236eef5c491fdf6b48ffc
Comment 3 Marco Martin 2016-02-04 10:56:48 UTC
Git commit 42a3d8accd4e494d343954ddaa916a6c618d94f3 by Marco Martin.
Committed on 04/02/2016 at 10:56.
Pushed by mart into branch 'Plasma/5.5'.

reset the model on list always shown/hide change

something really wrong is going on on the proxymodel updates
the wrong item gets removed from the list.
it may be  a wrong mapping between source and dest model
(doesn't seem so)
or may have been some misguided attempt by QML to recycle delegates

anyways resetting the model in some conditions even if expensive
seems to be the only way to workaround this.
Anyways this systray implementation is beyond any repair and
the rewritten version won't have to rely on so many models
and proxymodels
Related: bug 352055

M  +10   -3    applets/systemtray/plugin/tasksproxymodel.cpp
M  +4    -1    applets/systemtray/plugin/tasksproxymodel.h

http://commits.kde.org/plasma-workspace/42a3d8accd4e494d343954ddaa916a6c618d94f3