reset the model on list always shown/hide change

something really wrong is going on on the proxymodel updates
the wrong item gets removed from the list.
it may be  a wrong mapping between source and dest model
(doesn't seem so)
or may have been some misguided attempt by QML to recycle delegates

anyways resetting the model in some conditions even if expensive
seems to be the only way to workaround this.
Anyways this systray implementation is beyond any repair and
the rewritten version won't have to rely on so many models
and proxymodels

BUG:357627
CCBUG:352055